# musicbrainz.rs

./: Cargo.toml  README.md  search-index.js
brainz_macros/src/: lib.rs
examples/: app.rs
implementors/collections/borrow/: trait.ToOwned.js
implementors/collections/string/: trait.ToString.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
musicbrainz/: index.html  struct.MusicBrainz.html  struct.Uuid.html
musicbrainz/artist/: index.html  struct.Artist.html
musicbrainz/enums/: AlbumMainType.t.html  AlbumSecondaryType.t.html  enum.AlbumMainType.html  enum.AlbumSecondaryType.html  enum.PersonType.html  index.html  sidebar-items.js
musicbrainz/error/: enum.Error.html  index.html
musicbrainz/release_group/: index.html  struct.ReleaseGroup.html
musicbrainz/traits/: AlbumTrait.t.html  ArtistTrait.t.html  index.html  trait.AlbumTrait.html  trait.ArtistTrait.html  trait.Entity.html
src/: alias.rs  area.rs  artist.rs  cover_art_archive.rs  disc.rs  enums.rs  error.rs  event.rs  instrument.rs  label.rs  lib.rs  life_span.rs  media.rs  place.rs  recording.rs  relation.rs  release.rs  release_group.rs  series.rs  text_representation.rs  track.rs  traits.rs  utils.rs  work.rs
tests/: area.rs  artist.rs  deserialize.rs  lib.rs  life_span.rs  release_group.rs  tag.rs
(+64 files in other folders)
