[package]
name = "musicbrainz"
version = "0.1.0"
description = "MusicBrainz API bindings for Rust"
authors = ["Alexandre Oliveira <rockytvbr@gmail.com>"]
repository = "https://github.com/RockyTV/musicbrainz.rs"
license = "MIT"

[dependencies]
hyper = "0.9.10"
url = "1.2.0"
serde_json = "0.9"
serde = "0.9"
serde_derive = "0.9"
brainz_macros = { path = "brainz_macros" }

[dependencies.uuid]
version="0.4"
features=["serde"]
