[package]
name = "musicbrainz"
version = "0.1.0"
description = "MusicBrainz API bindings for Rust"
authors = ["Alexandre Oliveira <rockytvbr@gmail.com>"]
repository = "https://github.com/RockyTV/musicbrainz.rs"
license = "MIT"

[dependencies]
hyper = "0.10.10"
url = "1.4.0"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
brainz_macros = { path = "brainz_macros" }
mockers_macros = "0.5.9"

[dependencies.uuid]
version="0.5"
features=["serde"]

[dev-dependencies]
mockers = "0.5.9"
